--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@ body {
 }
   .S1container{
     
-    padding: 2%;
+    padding: 4%;
     margin-top: 100px;
     margin-bottom: 50px;
    
@@ -579,6 +579,17 @@ body {
     margin: 0;
   }
 }
+
+@media screen and (max-width : 850px) and (min-width : 768px){
+  .make-center{
+    width : 90%;
+    height: 90%;
+    margin-right: 0;
+    align-items: center;
+  }
+}
+
+
 
 
 
