--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body {
       background: linear-gradient(#28293E 50%, #FDF0E9 50%);
       background: linear-gradient(#28293E 0%, #28293E 22%, #FDF0E9 22%, #FDF0E9 40%, #28293E 40%,#28293E 61%,#FDF0E9 61%,#FDF0E9 84%,#28293E 84%,#28293E 95%, #FDF0E9 95%, #FDF0E9 100%);
       font-family: 'Epilogue', sans-serif;
-
+      
 }
 
 .width-70{
@@ -929,6 +929,12 @@ ul {
   }
 }
 
+@media screen and (max-width : 990px){
+  .small-col-width{
+    width : 100%;
+  }
+}
+
 @media (max-width: 787px) {
   /* Hide the list items by default */
   #listItems li {
@@ -965,6 +971,8 @@ ul {
     display: block;
   }
 }
+
+
 
 
 
