--- a/index.css
+++ b/index.css
@@ -941,7 +941,7 @@ ul {
     width : 100%;
   }
   .t-mt-removeA {
-    margin-top:0%;
+    margin-top:0% !important;
   }
   .gml{
     margin-left:40px;
